// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildCss() > for brand foundation tokens > should build CSS variables for foundation tokens > for core brand 1`] = `
"/**
 * Do not edit directly
 */


[data-o3-brand="core"] {
  --o3-color-palette-ft-pink: #FCD0B1; /* FT Pink is used for the FT logo */
  --o3-color-palette-ft-grey: #333333ff;
  --o3-color-palette-white: #ffffffff;
  --o3-color-palette-black: #000000ff;
  --o3-color-palette-claret: #990f3dff; /* Claret is the main branding colour for MyFT related products. It should be used sparingly and never be used as a background colour.  Usage example: MyFT branding; MyFT CTAs */
  --o3-color-palette-teal: #0d7680ff; /* Teal is the most striking colour and main CTA colour on ft.com. It is reserved for important action items that need to stand out: buttons, text links and other critical functional use cases. */
  --o3-color-palette-oxford: #0f5499ff; /* Oxford is used to denote opinion pieces (in combination with Sky). It is used on the homepage and in articles. Use for information and callouts in general.  Usage example: opinion branding; opinion topic tags. */
  --o3-color-palette-slate: #262a33ff; /* Slate is a warmer version of black. It is used as inverse backgrounds for editorial content and as a theme option(Mono) for buttons. */
  --o3-color-palette-paper: #fff1e5ff; /* Paper, as it’s name implies, is the FT’s main background colour. It is the main expression of the brand colour on product. It is a lighter, more legible shade of FT Pink and can be seen as a kind of replacement of white. */
  --o3-color-palette-transparrent: #ffffff00;
  --o3-color-palette-mandarin: #ff8833ff;
  --o3-color-palette-light-blue: #00a0ddff;
  --o3-color-palette-crimson: #cc0000ff;
  --o3-color-palette-graphics-dark-blue: #006f9bff;
  --o3-color-palette-wheat: #f2dfceff;
  --o3-color-palette-candy: #ff7faaff;
  --o3-color-palette-wasabi: #96cc28ff;
  --o3-color-palette-jade: #00994dff;
  --o3-color-palette-velvet: #593380ff;
  --o3-color-palette-lemon: #ffec1aff;
  --o3-color-palette-sky: #cce6ffff;
  --o3-color-palette-matisse-blue: #355778ff;
  --o3-color-palette-black-5: #f2e5daff;
  --o3-color-palette-black-10: #e6d9ceff;
  --o3-color-palette-black-20: #ccc1b7ff;
  --o3-color-palette-black-30: #b3a9a0ff;
  --o3-color-palette-black-40: #999189ff;
  --o3-color-palette-black-50: #807973ff;
  --o3-color-palette-black-60: #66605cff;
  --o3-color-palette-black-70: #4d4845ff;
  --o3-color-palette-black-80: #33302eff;
  --o3-color-palette-black-90: #1a1817ff;
  --o3-color-palette-white-10: #fff2e8ff;
  --o3-color-palette-white-20: #fff4eaff;
  --o3-color-palette-white-40: #fff7efff;
  --o3-color-palette-white-60: #fff9f5ff;
  --o3-color-palette-white-80: #fffcfaff;
  --o3-color-palette-oxford-30: #082a4dff;
  --o3-color-palette-oxford-40: #0a3866ff;
  --o3-color-palette-oxford-50: #0d4680ff;
  --o3-color-palette-oxford-60: #0f5499ff;
  --o3-color-palette-oxford-70: #1262b3ff;
  --o3-color-palette-oxford-80: #1470ccff;
  --o3-color-palette-oxford-90: #177ee6ff;
  --o3-color-palette-oxford-100: #1a8cffff;
  --o3-color-palette-teal-20: #052f33ff;
  --o3-color-palette-teal-30: #08474dff;
  --o3-color-palette-teal-40: #0a5e66ff;
  --o3-color-palette-teal-50: #0d7680ff;
  --o3-color-palette-teal-60: #0f8e99ff;
  --o3-color-palette-teal-70: #12a5b3ff;
  --o3-color-palette-teal-80: #14bdccff;
  --o3-color-palette-teal-90: #17d4e6ff;
  --o3-color-palette-teal-100: #1aecffff;
  --o3-color-palette-claret-30: #4d081fff;
  --o3-color-palette-claret-40: #660a29ff;
  --o3-color-palette-claret-50: #800d33ff;
  --o3-color-palette-claret-60: #990f3dff;
  --o3-color-palette-claret-70: #b31247ff;
  --o3-color-palette-claret-80: #cc1452ff;
  --o3-color-palette-claret-90: #e6175cff;
  --o3-color-palette-claret-100: #ff1a66ff;
  --o3-color-palette-wheat-100: #FFEBD9;
  --o3-spacing-5xs: 0.25rem;
  --o3-spacing-4xs: 0.5rem;
  --o3-spacing-3xs: 0.75rem;
  --o3-spacing-2xs: 1rem;
  --o3-spacing-xs: 1.25rem;
  --o3-spacing-s: 1.5rem;
  --o3-spacing-m: 2rem;
  --o3-spacing-l: 2.5rem;
  --o3-spacing-xl: 3rem;
  --o3-spacing-2xl: 4rem;
  --o3-spacing-3xl: 5rem;
  --o3-spacing-4xl: 6rem;
  --o3-font-family-metric: 'metric 2 VF';
  --o3-font-family-financier-display: 'financier display VF';
  --o3-font-family-georgia: georgia;
  --o3-font-weight-light: 300;
  --o3-font-weight-regular: 400;
  --o3-font-weight-medium: 500;
  --o3-font-weight-semibold: 700;
  --o3-font-weight-bold: 800;
  --o3-font-lineheight-0: 1.25rem;
  --o3-font-lineheight-1: 1.25rem;
  --o3-font-lineheight-2: 1.5rem;
  --o3-font-lineheight-3: 1.75rem;
  --o3-font-lineheight-4: 2rem;
  --o3-font-lineheight-5: 2rem;
  --o3-font-lineheight-6: 2.5rem;
  --o3-font-lineheight-7: 3rem;
  --o3-font-lineheight-8: 3.5rem;
  --o3-font-lineheight-9: 4.5rem;
  --o3-font-lineheight-10: 5.25rem;
  --o3-font-lineheight-negative-2: 1rem;
  --o3-font-lineheight-negative-1: 1rem;
  --o3-font-size-0: 1rem;
  --o3-font-size-1: 1.125rem;
  --o3-font-size-2: 1.25rem;
  --o3-font-size-3: 1.5rem;
  --o3-font-size-4: 1.75rem;
  --o3-font-size-5: 2rem;
  --o3-font-size-6: 2.5rem;
  --o3-font-size-7: 3rem;
  --o3-font-size-8: 3.5rem;
  --o3-font-size-9: 4.5rem;
  --o3-font-size-10: 5.25rem;
  --o3-font-size-negative-2: 0.75rem;
  --o3-font-size-negative-1: 0.875rem;
  --o3-font-lineheight-metric2-0: 1.25rem;
  --o3-font-lineheight-metric2-1: 1.25rem;
  --o3-font-lineheight-metric2-2: 1.5rem;
  --o3-font-lineheight-metric2-3: 1.75rem;
  --o3-font-lineheight-metric2-4: 2rem;
  --o3-font-lineheight-metric2-5: 2rem;
  --o3-font-lineheight-metric2-6: 2.5rem;
  --o3-font-lineheight-metric2-7: 3rem;
  --o3-font-lineheight-metric2-8: 3.5rem;
  --o3-font-lineheight-metric2-9: 4.5rem;
  --o3-font-lineheight-metric2-10: 5.25rem;
  --o3-font-lineheight-metric2-negative-2: 1rem;
  --o3-font-lineheight-metric2-negative-1: 1rem;
  --o3-font-size-metric2-0: 0.875rem;
  --o3-font-size-metric2-1: 1rem;
  --o3-font-size-metric2-2: 1.125rem;
  --o3-font-size-metric2-3: 1.25rem;
  --o3-font-size-metric2-4: 1.5rem;
  --o3-font-size-metric2-5: 1.75rem;
  --o3-font-size-metric2-6: 2rem;
  --o3-font-size-metric2-7: 2.5rem;
  --o3-font-size-metric2-8: 3rem;
  --o3-font-size-metric2-9: 4rem;
  --o3-font-size-metric2-10: 4.5rem;
  --o3-font-size-metric2-negative-2: 0.625rem;
  --o3-font-size-metric2-negative-1: 0.75rem;
}
"
`;

exports[`buildCss() > for brand foundation tokens > should build CSS variables for foundation tokens > for core/professional brand 1`] = `
"/**
 * Do not edit directly
 */


[data-o3-brand="professional"] {
  --o3-color-palette-ft-pink: #FCD0B1; /* FT Pink is used for the FT logo */
  --o3-color-palette-ft-grey: #333333ff;
  --o3-color-palette-white: #ffffffff;
  --o3-color-palette-black: #000000ff;
  --o3-color-palette-claret: #990f3dff; /* Claret is the main branding colour for MyFT related products. It should be used sparingly and never be used as a background colour.  Usage example: MyFT branding; MyFT CTAs */
  --o3-color-palette-teal: #0d7680ff; /* Teal is the most striking colour and main CTA colour on ft.com. It is reserved for important action items that need to stand out: buttons, text links and other critical functional use cases. */
  --o3-color-palette-oxford: #0f5499ff; /* Oxford is used to denote opinion pieces (in combination with Sky). It is used on the homepage and in articles. Use for information and callouts in general.  Usage example: opinion branding; opinion topic tags. */
  --o3-color-palette-slate: #262a33ff; /* Slate is a warmer version of black. It is used as inverse backgrounds for editorial content and as a theme option(Mono) for buttons. */
  --o3-color-palette-paper: #fff1e5ff; /* Paper, as it’s name implies, is the FT’s main background colour. It is the main expression of the brand colour on product. It is a lighter, more legible shade of FT Pink and can be seen as a kind of replacement of white. */
  --o3-color-palette-transparrent: #ffffff00;
  --o3-color-palette-mandarin: #ff8833ff;
  --o3-color-palette-light-blue: #00a0ddff;
  --o3-color-palette-crimson: #cc0000ff;
  --o3-color-palette-graphics-dark-blue: #006f9bff;
  --o3-color-palette-wheat: #f2dfceff;
  --o3-color-palette-candy: #ff7faaff;
  --o3-color-palette-wasabi: #96cc28ff;
  --o3-color-palette-jade: #00994dff;
  --o3-color-palette-velvet: #593380ff;
  --o3-color-palette-lemon: #ffec1aff;
  --o3-color-palette-sky: #cce6ffff;
  --o3-color-palette-matisse-blue: #355778ff;
  --o3-color-palette-black-5: #f2e5daff;
  --o3-color-palette-black-10: #e6d9ceff;
  --o3-color-palette-black-20: #ccc1b7ff;
  --o3-color-palette-black-30: #b3a9a0ff;
  --o3-color-palette-black-40: #999189ff;
  --o3-color-palette-black-50: #807973ff;
  --o3-color-palette-black-60: #66605cff;
  --o3-color-palette-black-70: #4d4845ff;
  --o3-color-palette-black-80: #33302eff;
  --o3-color-palette-black-90: #1a1817ff;
  --o3-color-palette-white-10: #fff2e8ff;
  --o3-color-palette-white-20: #fff4eaff;
  --o3-color-palette-white-40: #fff7efff;
  --o3-color-palette-white-60: #fff9f5ff;
  --o3-color-palette-white-80: #fffcfaff;
  --o3-color-palette-oxford-30: #082a4dff;
  --o3-color-palette-oxford-40: #0a3866ff;
  --o3-color-palette-oxford-50: #0d4680ff;
  --o3-color-palette-oxford-60: #0f5499ff;
  --o3-color-palette-oxford-70: #1262b3ff;
  --o3-color-palette-oxford-80: #1470ccff;
  --o3-color-palette-oxford-90: #177ee6ff;
  --o3-color-palette-oxford-100: #1a8cffff;
  --o3-color-palette-teal-20: #052f33ff;
  --o3-color-palette-teal-30: #08474dff;
  --o3-color-palette-teal-40: #0a5e66ff;
  --o3-color-palette-teal-50: #0d7680ff;
  --o3-color-palette-teal-60: #0f8e99ff;
  --o3-color-palette-teal-70: #12a5b3ff;
  --o3-color-palette-teal-80: #14bdccff;
  --o3-color-palette-teal-90: #17d4e6ff;
  --o3-color-palette-teal-100: #1aecffff;
  --o3-color-palette-claret-30: #4d081fff;
  --o3-color-palette-claret-40: #660a29ff;
  --o3-color-palette-claret-50: #800d33ff;
  --o3-color-palette-claret-60: #990f3dff;
  --o3-color-palette-claret-70: #b31247ff;
  --o3-color-palette-claret-80: #cc1452ff;
  --o3-color-palette-claret-90: #e6175cff;
  --o3-color-palette-claret-100: #ff1a66ff;
  --o3-color-palette-wheat-100: #FFEBD9;
  --o3-color-palette-mint: #c0efd8;
  --o3-color-palette-mint-80: #A4CCB8;
  --o3-color-palette-mint-70: #8FB3A1;
  --o3-color-palette-mint-60: #7B998A;
  --o3-color-palette-mint-50: #668073;
  --o3-color-palette-mint-40: #52665C;
  --o3-color-palette-mint-30: #3D4D45;
  --o3-color-use-case-link-text: var(--o3-color-palette-slate);
  --o3-color-use-case-link-text-hover: var(--o3-color-palette-slate);
  --o3-color-use-case-link-underline: var(--o3-color-palette-mint-80);
  --o3-color-use-case-link-underline-hover: var(--o3-color-palette-mint-80);
  --o3-color-use-case-link-inverse-text: var(--o3-color-palette-mint);
  --o3-color-use-case-link-inverse-text-hover: var(--o3-color-palette-mint-70);
  --o3-color-use-case-link-inverse-underline: var(--o3-color-palette-mint);
  --o3-color-use-case-link-inverse-underline-hover: var(--o3-color-palette-mint-70);
  --o3-spacing-5xs: 0.25rem;
  --o3-spacing-4xs: 0.5rem;
  --o3-spacing-3xs: 0.75rem;
  --o3-spacing-2xs: 1rem;
  --o3-spacing-xs: 1.25rem;
  --o3-spacing-s: 1.5rem;
  --o3-spacing-m: 2rem;
  --o3-spacing-l: 2.5rem;
  --o3-spacing-xl: 3rem;
  --o3-spacing-2xl: 4rem;
  --o3-spacing-3xl: 5rem;
  --o3-spacing-4xl: 6rem;
  --o3-font-family-metric: 'metric 2 VF';
  --o3-font-family-financier-display: 'financier display VF';
  --o3-font-family-georgia: georgia;
  --o3-font-weight-light: 300;
  --o3-font-weight-regular: 400;
  --o3-font-weight-medium: 500;
  --o3-font-weight-semibold: 700;
  --o3-font-weight-bold: 800;
  --o3-font-lineheight-0: 1.25rem;
  --o3-font-lineheight-1: 1.25rem;
  --o3-font-lineheight-2: 1.5rem;
  --o3-font-lineheight-3: 1.75rem;
  --o3-font-lineheight-4: 2rem;
  --o3-font-lineheight-5: 2rem;
  --o3-font-lineheight-6: 2.5rem;
  --o3-font-lineheight-7: 3rem;
  --o3-font-lineheight-8: 3.5rem;
  --o3-font-lineheight-9: 4.5rem;
  --o3-font-lineheight-10: 5.25rem;
  --o3-font-lineheight-negative-2: 1rem;
  --o3-font-lineheight-negative-1: 1rem;
  --o3-font-size-0: 1rem;
  --o3-font-size-1: 1.125rem;
  --o3-font-size-2: 1.25rem;
  --o3-font-size-3: 1.5rem;
  --o3-font-size-4: 1.75rem;
  --o3-font-size-5: 2rem;
  --o3-font-size-6: 2.5rem;
  --o3-font-size-7: 3rem;
  --o3-font-size-8: 3.5rem;
  --o3-font-size-9: 4.5rem;
  --o3-font-size-10: 5.25rem;
  --o3-font-size-negative-2: 0.75rem;
  --o3-font-size-negative-1: 0.875rem;
  --o3-font-lineheight-metric2-0: 1.25rem;
  --o3-font-lineheight-metric2-1: 1.25rem;
  --o3-font-lineheight-metric2-2: 1.5rem;
  --o3-font-lineheight-metric2-3: 1.75rem;
  --o3-font-lineheight-metric2-4: 2rem;
  --o3-font-lineheight-metric2-5: 2rem;
  --o3-font-lineheight-metric2-6: 2.5rem;
  --o3-font-lineheight-metric2-7: 3rem;
  --o3-font-lineheight-metric2-8: 3.5rem;
  --o3-font-lineheight-metric2-9: 4.5rem;
  --o3-font-lineheight-metric2-10: 5.25rem;
  --o3-font-lineheight-metric2-negative-2: 1rem;
  --o3-font-lineheight-metric2-negative-1: 1rem;
  --o3-font-size-metric2-0: 0.875rem;
  --o3-font-size-metric2-1: 1rem;
  --o3-font-size-metric2-2: 1.125rem;
  --o3-font-size-metric2-3: 1.25rem;
  --o3-font-size-metric2-4: 1.5rem;
  --o3-font-size-metric2-5: 1.75rem;
  --o3-font-size-metric2-6: 2rem;
  --o3-font-size-metric2-7: 2.5rem;
  --o3-font-size-metric2-8: 3rem;
  --o3-font-size-metric2-9: 4rem;
  --o3-font-size-metric2-10: 4.5rem;
  --o3-font-size-metric2-negative-2: 0.625rem;
  --o3-font-size-metric2-negative-1: 0.75rem;
}
"
`;

exports[`buildCss() > for brand foundation tokens > should build CSS variables for foundation tokens > for whitelabel brand 1`] = `
"/**
 * Do not edit directly
 */


[data-o3-brand="whitelabel"] {
  --o3-color-palette-black: #000;
  --o3-color-palette-white: #fff;
  --o3-color-palette-jade: #00994d;
  --o3-color-palette-crimson: #c00;
  --o3-color-palette-black-5: #F2F2F2;
  --o3-color-palette-black-10: #E6E6E6;
  --o3-color-palette-black-20: #ccc;
  --o3-color-palette-black-30: #B3B3B3;
  --o3-color-palette-black-40: #999;
  --o3-color-palette-black-50: #808080;
  --o3-color-palette-black-60: #666;
  --o3-color-palette-black-70: #4d4d4d;
  --o3-color-palette-black-80: #333;
  --o3-color-palette-black-90: #1a1a1a;
  --o3-color-use-case-link-text: var(--o3-color-palette-black-50);
  --o3-color-use-case-link-text-hover: var(--o3-color-palette-black-60);
  --o3-color-use-case-link-underline: var(--o3-color-palette-black-30);
  --o3-color-use-case-link-underline-hover: var(--o3-color-palette-black-70);
  --o3-color-use-case-link-inverse-text: #;
  --o3-color-use-case-link-inverse-text-hover: var(--o3-color-palette-black-20);
  --o3-color-use-case-link-inverse-underline: var(--o3-color-palette-white);
  --o3-color-use-case-link-inverse-underline-hover: var(--o3-color-palette-black-20);
  --o3-color-use-case-page-background: var(--o3-color-palette-white);
  --o3-color-use-case-page-inverse-background: var(--o3-color-palette-black-80);
  --o3-color-use-case-body-text: var(--o3-color-palette-black-80);
  --o3-color-use-case-body-inverse-text: var(--o3-color-palette-white);
  --o3-color-use-case-muted-text: var(--o3-color-palette-black-20); /* "Muted" text is less prominent, for example credits and captions. */
  --o3-color-use-case-muted-inverse: #808080;
  --o3-spacing-5xs: 0.25rem;
  --o3-spacing-4xs: 0.5rem;
  --o3-spacing-3xs: 0.75rem;
  --o3-spacing-2xs: 1rem;
  --o3-spacing-xs: 1.25rem;
  --o3-spacing-s: 1.5rem;
  --o3-spacing-m: 2rem;
  --o3-spacing-l: 2.5rem;
  --o3-spacing-xl: 3rem;
  --o3-spacing-2xl: 4rem;
  --o3-spacing-3xl: 5rem;
  --o3-spacing-4xl: 6rem;
  --o3-font-family-metric: 'metric 2 VF';
  --o3-font-family-financier-display: 'financier display VF';
  --o3-font-family-georgia: georgia;
  --o3-font-weight-light: 300;
  --o3-font-weight-regular: 400;
  --o3-font-weight-medium: 500;
  --o3-font-weight-semibold: 700;
  --o3-font-weight-bold: 800;
  --o3-font-lineheight-0: 1.25rem;
  --o3-font-lineheight-1: 1.25rem;
  --o3-font-lineheight-2: 1.5rem;
  --o3-font-lineheight-3: 1.75rem;
  --o3-font-lineheight-4: 2rem;
  --o3-font-lineheight-5: 2rem;
  --o3-font-lineheight-6: 2.5rem;
  --o3-font-lineheight-7: 3rem;
  --o3-font-lineheight-8: 3.5rem;
  --o3-font-lineheight-9: 4.5rem;
  --o3-font-lineheight-10: 5.25rem;
  --o3-font-lineheight-negative-2: 1rem;
  --o3-font-lineheight-negative-1: 1rem;
  --o3-font-size-0: 1rem;
  --o3-font-size-1: 1.125rem;
  --o3-font-size-2: 1.25rem;
  --o3-font-size-3: 1.5rem;
  --o3-font-size-4: 1.75rem;
  --o3-font-size-5: 2rem;
  --o3-font-size-6: 2.5rem;
  --o3-font-size-7: 3rem;
  --o3-font-size-8: 3.5rem;
  --o3-font-size-9: 4.5rem;
  --o3-font-size-10: 5.25rem;
  --o3-font-size-negative-2: 0.75rem;
  --o3-font-size-negative-1: 0.875rem;
  --o3-font-lineheight-metric2-0: 1.25rem;
  --o3-font-lineheight-metric2-1: 1.25rem;
  --o3-font-lineheight-metric2-2: 1.5rem;
  --o3-font-lineheight-metric2-3: 1.75rem;
  --o3-font-lineheight-metric2-4: 2rem;
  --o3-font-lineheight-metric2-5: 2rem;
  --o3-font-lineheight-metric2-6: 2.5rem;
  --o3-font-lineheight-metric2-7: 3rem;
  --o3-font-lineheight-metric2-8: 3.5rem;
  --o3-font-lineheight-metric2-9: 4.5rem;
  --o3-font-lineheight-metric2-10: 5.25rem;
  --o3-font-lineheight-metric2-negative-2: 1rem;
  --o3-font-lineheight-metric2-negative-1: 1rem;
  --o3-font-size-metric2-0: 0.875rem;
  --o3-font-size-metric2-1: 1rem;
  --o3-font-size-metric2-2: 1.125rem;
  --o3-font-size-metric2-3: 1.25rem;
  --o3-font-size-metric2-4: 1.5rem;
  --o3-font-size-metric2-5: 1.75rem;
  --o3-font-size-metric2-6: 2rem;
  --o3-font-size-metric2-7: 2.5rem;
  --o3-font-size-metric2-8: 3rem;
  --o3-font-size-metric2-9: 4rem;
  --o3-font-size-metric2-10: 4.5rem;
  --o3-font-size-metric2-negative-2: 0.625rem;
  --o3-font-size-metric2-negative-1: 0.75rem;
}
"
`;

exports[`buildCss() > for icon tokens > should build CSS variables for icon tokens 1`] = `
"/**
 * Do not edit directly
 */

:root {
  --o3-icons-ft-social-x: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M13.443%2010.7118L19.3644%203.97656H17.9612L12.8196%209.82466L8.71303%203.97656H3.97657L10.1865%2012.8199L3.97657%2019.8828H5.37985L10.8095%2013.707L15.1464%2019.8828H19.8828L13.4426%2010.7118H13.443ZM11.521%2012.8978L10.8918%2012.0172L5.88547%205.01021H8.04082L12.081%2010.6651L12.7102%2011.5457L17.9619%2018.8962H15.8065L11.521%2012.8982V12.8978Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-social-linkedin: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M5.06474%207.93165C6.41941%207.93165%207.26418%207.04798%207.26418%205.94422C7.23925%204.81651%206.41998%203.95847%205.0908%203.95847C3.76161%203.95847%202.89192%204.81595%202.89192%205.94422C2.89192%207.04798%203.73555%207.93165%205.04037%207.93165H5.06474ZM21.0221%2020.9995V14.407C21.0221%2010.8746%2019.1048%209.23091%2016.5484%209.23091C14.4855%209.23091%2013.5609%2010.3469%2013.0459%2011.1303V9.50114H9.15917C9.21072%2010.5804%209.15917%2020.9995%209.15917%2020.9995H13.0459V14.5781C13.0459%2014.2354%2013.0708%2013.8916%2013.1739%2013.6465C13.4544%2012.9595%2014.094%2012.2485%2015.1671%2012.2485C16.5739%2012.2485%2017.136%2013.3027%2017.136%2014.8483V21L21.0221%2020.9995ZM7.00836%209.50123V20.9996H3.12222V9.50123H7.00836Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-social-facebook: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M13.5419%2022V12.8768H16.5169L16.959%209.32329H13.5419V7.05214C13.5419%206.02472%2013.8192%205.32175%2015.2505%205.32175H17.0789V2.13905C16.7642%202.0927%2015.6776%202%2014.4187%202C11.7809%202%209.98247%203.66087%209.98247%206.70452V9.33102H7V12.8845H9.98247V22H13.5419V22Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-user-outlined: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M16%208C16%2010.2091%2014.2091%2012%2012%2012C9.79086%2012%208%2010.2091%208%208C8%205.79086%209.79086%204%2012%204C14.2091%204%2016%205.79086%2016%208ZM14%208C14%209.10457%2013.1046%2010%2012%2010C10.8954%2010%2010%209.10457%2010%208C10%206.89543%2010.8954%206%2012%206C13.1046%206%2014%206.89543%2014%208Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M12%2013C17%2013%2019%2016.1194%2019%2018V21H5V18C5%2016.1194%207%2013%2012%2013ZM7%2018C7%2017.4127%207.90585%2015%2012%2015C16.0941%2015%2017%2017.4127%2017%2018V19H7V18Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-user-filled: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M12%2012C14.2091%2012%2016%2010.2091%2016%208C16%205.79086%2014.2091%204%2012%204C9.79086%204%208%205.79086%208%208C8%2010.2091%209.79086%2012%2012%2012Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M5%2018C5%2016.1194%207%2013%2012%2013C17%2013%2019%2016.1194%2019%2018V21H5V18Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-speaker: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M3%2015V9H7L14%204V20L7%2015H3Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M19.853%208.74719C19.4258%207.71592%2018.7997%206.77889%2018.0104%205.98959L19.0711%204.92893C19.9997%205.85752%2020.7362%206.95991%2021.2388%208.17317C21.7413%209.38642%2022%2010.6868%2022%2012C22%2013.3132%2021.7413%2014.6136%2021.2388%2015.8268C20.7362%2017.0401%2019.9997%2018.1425%2019.0711%2019.0711L18.0104%2018.0104C18.7997%2017.2211%2019.4258%2016.2841%2019.853%2015.2528C20.2801%2014.2215%2020.5%2013.1162%2020.5%2012C20.5%2010.8838%2020.2801%209.77846%2019.853%208.74719Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M15.8891%208.11091C16.3998%208.62163%2016.8049%209.22795%2017.0813%209.89524C17.3577%2010.5625%2017.5%2011.2777%2017.5%2012C17.5%2012.7223%2017.3577%2013.4375%2017.0813%2014.1048C16.8049%2014.772%2016.3998%2015.3784%2015.8891%2015.8891L16.9498%2016.9497C17.5998%2016.2997%2018.1154%2015.5281%2018.4672%2014.6788C18.819%2013.8295%2019%2012.9193%2019%2012C19%2011.0807%2018.819%2010.1705%2018.4672%209.32122C18.1154%208.47194%2017.5998%207.70026%2016.9498%207.05025L15.8891%208.11091Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-signout: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M14%204H3V20H14V18H5V6H14V4Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M22.4142%2012L17.2071%206.79289L15.7929%208.20711L18.5858%2011H9V13H18.5858L15.7929%2015.7929L17.2071%2017.2071L22.4142%2012Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-print: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M5%203L5%209C3.34315%209%202%2010.3431%202%2012V17H5V21H19V17H22V12C22%2010.3431%2020.6569%209%2019%209V3H5ZM17%205H7V8H17V5ZM17%2014H7V19H17V14ZM19%2012V11H18V12H19Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-play: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M6%2020V4L20%2012L6%2020Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-calendar: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M9%2014V12H7V14H9Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M8%205V3H6V5H3V21H21V5H18V3H16V5H8ZM5%2010H19V19H5V10Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-refresh: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M16.1905%206.39291C14.9278%205.44922%2013.3836%204.95935%2011.8078%205.00264C10.232%205.04593%208.71695%205.61983%207.50796%206.63143C6.29897%207.64302%205.46682%209.03308%205.14626%2010.5765C4.82569%2012.12%205.03548%2013.7264%205.74165%2015.1358C6.44782%2016.5451%207.60903%2017.6749%209.03725%2018.3421C10.4655%2019.0093%2012.0771%2019.1749%2013.6111%2018.8121C15.1452%2018.4492%2016.5119%2017.5792%2017.4899%2016.3429C18.4679%2015.1066%2019%2013.5764%2019%2012V11L21%2011V12C21%2014.0268%2020.3159%2015.9942%2019.0584%2017.5838C17.801%2019.1733%2016.0438%2020.2919%2014.0715%2020.7584C12.0991%2021.2249%2010.027%2021.012%208.19075%2020.1541C6.35447%2019.2963%204.86149%2017.8438%203.95355%2016.0317C3.04562%2014.2197%202.7759%2012.1542%203.18805%2010.1698C3.6002%208.18539%204.67011%206.39817%206.22452%205.09755C7.77893%203.79693%209.72685%203.05905%2011.7529%203.0034C13.7144%202.94951%2015.638%203.53819%2017.2318%204.67688L17.911%203.50457L20.5022%208.00854L15.3061%208.00059L16.2233%206.41744L16.1905%206.39291Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-upload: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M13%2017V7.50377L15.3415%209.55257L16.6585%208.04742L12.6585%204.54742L12%203.97123L11.3415%204.54742L7.3415%208.04742L8.6585%209.55257L11%207.50377V17H13ZM4%2019V21H20V19H4Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-tick: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M4%2013L8%2017L19%206%22%20stroke=%22black%22%20stroke-width=%222%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-search: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M10%204C6.68629%204%204%206.68629%204%2010C4%2013.3137%206.68629%2016%2010%2016C11.2958%2016%2012.4957%2015.5892%2013.4765%2014.8907L18.2929%2019.7071L19.7071%2018.2929L14.8907%2013.4765C15.5892%2012.4957%2016%2011.2958%2016%2010C16%206.68629%2013.3137%204%2010%204ZM6%2010C6%207.79086%207.79086%206%2010%206C12.2091%206%2014%207.79086%2014%2010C14%2012.2091%2012.2091%2014%2010%2014C7.79086%2014%206%2012.2091%206%2010Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-plus: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M11%2013V20H13V13H20V11H13V4H11V11H4V13H11Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-list: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M4%207H6V9H4V7Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M20%207H8V9H20V7Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M6%2011H4V13H6V11Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M4%2015H6V17H4V15Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M8%2011H20V13H8V11Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M20%2015H8V17H20V15Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-grid: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M11%205H5V11H11V5Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M19%205H13V11H19V5Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M5%2013H11V19H5V13Z%22%20fill=%22black%22/%3E%0A%20%20%3Cpath%20d=%22M19%2013H13V19H19V13Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-edit-outlined: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M4%2016V18H6H7.46667H8.29509L8.88088%2017.4142L18.4142%207.88088L19.8284%206.46667L18.4142%205.05245L16.9475%203.58579L15.5333%202.17157L14.1191%203.58579L4.58579%2013.1191L4%2013.7049V14.5333V16ZM7.46667%2016L8%2015.4667L15.5858%207.88088L17%206.46667L16.9475%206.41421L15.5858%205.05245L15.5333%205L14.1191%206.41421L6.53333%2014L6%2014.5333V16H7.46667ZM21%2019H3V21H21V19Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-edit-filled: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M4%2018V13.7716L15.1%202.67157L19.3284%206.9L8.22843%2018H4ZM21%2019H3V21H21V19Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-download: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M11%204V13.4962L8.6585%2011.4474L7.3415%2012.9526L11.3415%2016.4526L12%2017.0288L12.6585%2016.4526L16.6585%2012.9526L15.3415%2011.4474L13%2013.4962V4H11ZM4%2019V21H20V19H4Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-cross: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M4.92893%2017.6569L6.34315%2019.0711L12%2013.4142L17.6569%2019.0711L19.0711%2017.6569L13.4142%2012L19.0711%206.34315L17.6569%204.92893L12%2010.5858L6.34315%204.92894L4.92893%206.34315L10.5858%2012L4.92893%2017.6569Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-arrow-up: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M20%2016L12%208L4%2016%22%20stroke=%22black%22%20stroke-width=%222%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-arrow-down: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M20%208L12%2016L4%208%22%20stroke=%22black%22%20stroke-width=%222%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-arrow-right: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M8%204L16%2012L8%2020%22%20stroke=%22black%22%20stroke-width=%222%22/%3E%0A%3C/svg%3E");
  --o3-icons-ft-icon-arrow-left: url("data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%3E%0A%20%20%3Cpath%20d=%22M16%204L8%2012L16%2020%22%20stroke=%22black%22%20stroke-width=%222%22/%3E%0A%3C/svg%3E");
}
"
`;

exports[`buildCss() > should build CSS variables for > o3-button component tokens > for core brand 1`] = `
"/**
 * Do not edit directly
 */


[data-o3-brand="core"] .o3-button {
  --o3-button-primary-standard-color: #ffffff;
  --o3-button-primary-standard-background: #0d7680;
  --o3-button-primary-standard-border: #ffffff00;
  --o3-button-primary-standard-hover-background: #095259;
  --o3-button-primary-standard-hover-color: #ffffff;
  --o3-button-primary-standard-hover-border: #ffffff00;
  --o3-button-primary-standard-focus-background: #095259;
  --o3-button-primary-standard-focus-color: #ffffff;
  --o3-button-primary-standard-focus-border: #ffffff00;
  --o3-button-primary-standard-active-background: #052f33;
  --o3-button-primary-standard-active-color: #ffffff;
  --o3-button-primary-standard-active-border: #ffffff00;
  --o3-button-primary-inverse-color: #262a33;
  --o3-button-primary-inverse-background: #ffffff;
  --o3-button-primary-inverse-border: #ffffff00;
  --o3-button-primary-inverse-hover-background: #c9cacc;
  --o3-button-primary-inverse-hover-color: #262a33;
  --o3-button-primary-inverse-hover-border: #ffffff00;
  --o3-button-primary-inverse-focus-background: #c9cacc;
  --o3-button-primary-inverse-focus-color: #262a33;
  --o3-button-primary-inverse-focus-border: #ffffff00;
  --o3-button-primary-inverse-active-background: #9d9fa3;
  --o3-button-primary-inverse-active-color: #262a33;
  --o3-button-primary-inverse-active-border: #ffffff00;
  --o3-button-primary-mono-color: #ffffff;
  --o3-button-primary-mono-background: #262a33;
  --o3-button-primary-mono-border: #ffffff00;
  --o3-button-primary-mono-hover-background: #515257;
  --o3-button-primary-mono-hover-color: #ffffff;
  --o3-button-primary-mono-hover-border: #ffffff00;
  --o3-button-primary-mono-focus-background: #515257;
  --o3-button-primary-mono-focus-color: #ffffff;
  --o3-button-primary-mono-focus-border: #ffffff00;
  --o3-button-primary-mono-active-background: #727071;
  --o3-button-primary-mono-active-color: #ffffff;
  --o3-button-primary-mono-active-border: #ffffff00;
  --o3-button-secondary-standard-color: #0d7680;
  --o3-button-secondary-standard-background: #ffffff00;
  --o3-button-secondary-standard-border: #0d7680;
  --o3-button-secondary-standard-hover-background: rgba(13, 118, 128, 0.1);
  --o3-button-secondary-standard-hover-color: #0c707a;
  --o3-button-secondary-standard-hover-border: #0d7680;
  --o3-button-secondary-standard-focus-background: rgba(13, 118, 128, 0.1);
  --o3-button-secondary-standard-focus-color: #0c707a;
  --o3-button-secondary-standard-focus-border: #0d7680;
  --o3-button-secondary-standard-active-background: #0d7680;
  --o3-button-secondary-standard-active-color: #ffffff;
  --o3-button-secondary-standard-active-border: #0d7680;
  --o3-button-secondary-inverse-color: #ffffff;
  --o3-button-secondary-inverse-background: #ffffff00;
  --o3-button-secondary-inverse-border: #ffffff;
  --o3-button-secondary-inverse-hover-background: rgba(255, 255, 255, 0.15);
  --o3-button-secondary-inverse-hover-color: #ffffff;
  --o3-button-secondary-inverse-hover-border: #ffffff;
  --o3-button-secondary-inverse-focus-background: rgba(255, 255, 255, 0.15);
  --o3-button-secondary-inverse-focus-color: #ffffff;
  --o3-button-secondary-inverse-focus-border: #ffffff;
  --o3-button-secondary-inverse-active-background: #ffffff;
  --o3-button-secondary-inverse-active-color: #000000;
  --o3-button-secondary-inverse-active-border: #ffffff;
  --o3-button-secondary-mono-color: #262a33;
  --o3-button-secondary-mono-background: #ffffff00;
  --o3-button-secondary-mono-border: #262a33;
  --o3-button-secondary-mono-hover-background: rgba(38, 42, 51, 0.15);
  --o3-button-secondary-mono-hover-color: #262a33;
  --o3-button-secondary-mono-hover-border: #262a33;
  --o3-button-secondary-mono-focus-background: rgba(38, 42, 51, 0.15);
  --o3-button-secondary-mono-focus-color: #262a33;
  --o3-button-secondary-mono-focus-border: #262a33;
  --o3-button-secondary-mono-active-background: #262a33;
  --o3-button-secondary-mono-active-color: #ffffff;
  --o3-button-secondary-mono-active-border: #262a33;
  --o3-button-ghost-standard-color: #0d7680;
  --o3-button-ghost-standard-background: #ffffff00;
  --o3-button-ghost-standard-border: #ffffff00;
  --o3-button-ghost-standard-hover-background: rgba(13, 118, 128, 0.1);
  --o3-button-ghost-standard-hover-color: #0c707a;
  --o3-button-ghost-standard-hover-border: #ffffff00;
  --o3-button-ghost-standard-focus-background: rgba(13, 118, 128, 0.1);
  --o3-button-ghost-standard-focus-color: #0c707a;
  --o3-button-ghost-standard-focus-border: #ffffff00;
  --o3-button-ghost-standard-active-background: #0d7680;
  --o3-button-ghost-standard-active-color: #ffffff;
  --o3-button-ghost-standard-active-border: #ffffff00;
  --o3-button-ghost-inverse-color: #ffffff;
  --o3-button-ghost-inverse-background: #ffffff00;
  --o3-button-ghost-inverse-border: #ffffff00;
  --o3-button-ghost-inverse-hover-background: rgba(255, 255, 255, 0.15);
  --o3-button-ghost-inverse-hover-color: #ffffff;
  --o3-button-ghost-inverse-hover-border: #ffffff00;
  --o3-button-ghost-inverse-focus-background: rgba(255, 255, 255, 0.15);
  --o3-button-ghost-inverse-focus-color: #ffffff;
  --o3-button-ghost-inverse-focus-border: #ffffff00;
  --o3-button-ghost-inverse-active-background: #ffffff;
  --o3-button-ghost-inverse-active-color: #000000;
  --o3-button-ghost-inverse-active-border: #ffffff00;
  --o3-button-ghost-mono-color: #262a33;
  --o3-button-ghost-mono-background: #ffffff00;
  --o3-button-ghost-mono-border: #ffffff00;
  --o3-button-ghost-mono-hover-background: rgba(38, 42, 51, 0.15);
  --o3-button-ghost-mono-hover-color: #262a33;
  --o3-button-ghost-mono-hover-border: #ffffff00;
  --o3-button-ghost-mono-focus-background: rgba(38, 42, 51, 0.15);
  --o3-button-ghost-mono-focus-color: #262a33;
  --o3-button-ghost-mono-focus-border: #ffffff00;
  --o3-button-ghost-mono-active-background: #262a33;
  --o3-button-ghost-mono-active-color: #ffffff;
  --o3-button-ghost-mono-active-border: #ffffff00;
}
"
`;

exports[`buildCss() > should build CSS variables for > o3-button component tokens > for core/professional brand 1`] = `
"/**
 * Do not edit directly
 */


[data-o3-brand="professional"] .o3-button {
  --o3-button-primary-standard-color: #ffffff;
  --o3-button-primary-standard-background: #262a33;
  --o3-button-primary-standard-border: #ffffff00;
  --o3-button-primary-standard-hover-background: #515257;
  --o3-button-primary-standard-hover-color: #ffffff;
  --o3-button-primary-standard-hover-border: #ffffff00;
  --o3-button-primary-standard-focus-background: #515257;
  --o3-button-primary-standard-focus-color: #ffffff;
  --o3-button-primary-standard-focus-border: #ffffff00;
  --o3-button-primary-standard-active-background: #727071;
  --o3-button-primary-standard-active-color: #ffffff;
  --o3-button-primary-standard-active-border: #ffffff00;
  --o3-button-primary-inverse-color: #262a33;
  --o3-button-primary-inverse-background: #c0efd8;
  --o3-button-primary-inverse-border: #ffffff00;
  --o3-button-primary-inverse-hover-background: #9abeaf;
  --o3-button-primary-inverse-hover-color: #262a33;
  --o3-button-primary-inverse-hover-border: #ffffff00;
  --o3-button-primary-inverse-focus-background: #9abeaf;
  --o3-button-primary-inverse-focus-color: #262a33;
  --o3-button-primary-inverse-focus-border: #ffffff00;
  --o3-button-primary-inverse-active-background: #7b968e;
  --o3-button-primary-inverse-active-color: #262a33;
  --o3-button-primary-inverse-active-border: #ffffff00;
  --o3-button-secondary-standard-color: #262a33;
  --o3-button-secondary-standard-background: #ffffff00;
  --o3-button-secondary-standard-border: #262a33;
  --o3-button-secondary-standard-hover-background: rgba(38, 42, 51, 0.15);
  --o3-button-secondary-standard-hover-color: #262a33;
  --o3-button-secondary-standard-hover-border: #262a33;
  --o3-button-secondary-standard-focus-background: rgba(38, 42, 51, 0.15);
  --o3-button-secondary-standard-focus-color: #262a33;
  --o3-button-secondary-standard-focus-border: #262a33;
  --o3-button-secondary-standard-active-background: #262a33;
  --o3-button-secondary-standard-active-color: #ffffff;
  --o3-button-secondary-standard-active-border: #262a33;
  --o3-button-secondary-inverse-color: #c0efd8;
  --o3-button-secondary-inverse-background: #ffffff00;
  --o3-button-secondary-inverse-border: #c0efd8;
  --o3-button-secondary-inverse-hover-background: rgba(192, 239, 216, 0.15);
  --o3-button-secondary-inverse-hover-color: #c0efd8;
  --o3-button-secondary-inverse-hover-border: #c0efd8;
  --o3-button-secondary-inverse-focus-background: rgba(192, 239, 216, 0.15);
  --o3-button-secondary-inverse-focus-color: #c0efd8;
  --o3-button-secondary-inverse-focus-border: #c0efd8;
  --o3-button-secondary-inverse-active-background: #c0efd8;
  --o3-button-secondary-inverse-active-color: #000000;
  --o3-button-secondary-inverse-active-border: #c0efd8;
  --o3-button-ghost-standard-color: #262a33;
  --o3-button-ghost-standard-background: #ffffff00;
  --o3-button-ghost-standard-border: #ffffff00;
  --o3-button-ghost-standard-hover-background: rgba(38, 42, 51, 0.15);
  --o3-button-ghost-standard-hover-color: #262a33;
  --o3-button-ghost-standard-hover-border: #ffffff00;
  --o3-button-ghost-standard-focus-background: rgba(38, 42, 51, 0.15);
  --o3-button-ghost-standard-focus-color: #262a33;
  --o3-button-ghost-standard-focus-border: #ffffff00;
  --o3-button-ghost-standard-active-background: #262a33;
  --o3-button-ghost-standard-active-color: #ffffff;
  --o3-button-ghost-standard-active-border: #ffffff00;
  --o3-button-ghost-inverse-color: #c0efd8;
  --o3-button-ghost-inverse-background: #ffffff00;
  --o3-button-ghost-inverse-border: #ffffff00;
  --o3-button-ghost-inverse-hover-background: rgba(192, 239, 216, 0.15);
  --o3-button-ghost-inverse-hover-color: #c0efd8;
  --o3-button-ghost-inverse-hover-border: #ffffff00;
  --o3-button-ghost-inverse-focus-background: rgba(192, 239, 216, 0.15);
  --o3-button-ghost-inverse-focus-color: #c0efd8;
  --o3-button-ghost-inverse-focus-border: #ffffff00;
  --o3-button-ghost-inverse-active-background: #c0efd8;
  --o3-button-ghost-inverse-active-color: #000000;
  --o3-button-ghost-inverse-active-border: #ffffff00;
}
"
`;

exports[`buildCss() > should build CSS variables for > o3-button component tokens > for whitelabel brand 1`] = `
"/**
 * Do not edit directly
 */


[data-o3-brand="whitelabel"] .o3-button {
  --o3-button-primary-standard-color: #ffffff;
  --o3-button-primary-standard-background: #000000;
  --o3-button-primary-standard-border: #ffffff00;
  --o3-button-primary-standard-hover-background: #333333;
  --o3-button-primary-standard-hover-color: #ffffff;
  --o3-button-primary-standard-hover-border: #ffffff00;
  --o3-button-primary-standard-focus-background: #333333;
  --o3-button-primary-standard-focus-color: #ffffff;
  --o3-button-primary-standard-focus-border: #ffffff00;
  --o3-button-primary-standard-active-background: #595959;
  --o3-button-primary-standard-active-color: #ffffff;
  --o3-button-primary-standard-active-border: #ffffff00;
  --o3-button-secondary-standard-color: #000000;
  --o3-button-secondary-standard-background: #ffffff00;
  --o3-button-secondary-standard-border: #000000;
  --o3-button-secondary-standard-hover-background: rgba(0, 0, 0, 0.15);
  --o3-button-secondary-standard-hover-color: #000000;
  --o3-button-secondary-standard-hover-border: #000000;
  --o3-button-secondary-standard-focus-background: rgba(0, 0, 0, 0.15);
  --o3-button-secondary-standard-focus-color: #000000;
  --o3-button-secondary-standard-focus-border: #000000;
  --o3-button-secondary-standard-active-background: #000000;
  --o3-button-secondary-standard-active-color: #ffffff;
  --o3-button-secondary-standard-active-border: #000000;
  --o3-button-ghost-standard-color: #000000;
  --o3-button-ghost-standard-background: #ffffff00;
  --o3-button-ghost-standard-border: #ffffff00;
  --o3-button-ghost-standard-hover-background: rgba(0, 0, 0, 0.15);
  --o3-button-ghost-standard-hover-color: #000000;
  --o3-button-ghost-standard-hover-border: #ffffff00;
  --o3-button-ghost-standard-focus-background: rgba(0, 0, 0, 0.15);
  --o3-button-ghost-standard-focus-color: #000000;
  --o3-button-ghost-standard-focus-border: #ffffff00;
  --o3-button-ghost-standard-active-background: #000000;
  --o3-button-ghost-standard-active-color: #ffffff;
  --o3-button-ghost-standard-active-active: #ffffff00;
}
"
`;

exports[`buildCss() > should build CSS variables for > o3-tooltip component tokens > for core brand 1`] = `
"/**
 * Do not edit directly
 */


[data-o3-brand="core"] .o3-tooltip {
  --o3-tooltip-background-color: var(--o3-color-palette-white);
  --o3-tooltip-text-color: var(--o3-color-palette-black-90);
  --o3-tooltip-icon-info: url("data:image/svg+xml,%3Csvg%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20xmlns=%22http://www.w3.org/2000/svg%22%3E%0A%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M12%204C7.58172%204%204%207.58172%204%2012C4%2016.4183%207.58172%2020%2012%2020C16.4183%2020%2020%2016.4183%2020%2012C20%207.58172%2016.4183%204%2012%204ZM2%2012C2%206.47715%206.47715%202%2012%202C17.5228%202%2022%206.47715%2022%2012C22%2017.5228%2017.5228%2022%2012%2022C6.47715%2022%202%2017.5228%202%2012Z%22%20fill=%22black%22/%3E%0A%3Cpath%20d=%22M13.2948%2010.012V17.376H10.7188V10.012H13.2948ZM10.5508%207.99602C10.5508%207.58536%2010.6908%207.25402%2010.9708%207.00202C11.2601%206.75002%2011.6008%206.62402%2011.9928%206.62402C12.3941%206.62402%2012.7348%206.75002%2013.0148%207.00202C13.3041%207.25402%2013.4488%207.58536%2013.4488%207.99602C13.4488%208.40669%2013.3041%208.74269%2013.0148%209.00402C12.7348%209.25602%2012.3941%209.38202%2011.9928%209.38202C11.6008%209.38202%2011.2601%209.25602%2010.9708%209.00402C10.6908%208.74269%2010.5508%208.40669%2010.5508%207.99602Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-tooltip-icon-cross: url("data:image/svg+xml,%3Csvg%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20xmlns=%22http://www.w3.org/2000/svg%22%3E%0A%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M12%204C7.58172%204%204%207.58172%204%2012C4%2016.4183%207.58172%2020%2012%2020C16.4183%2020%2020%2016.4183%2020%2012C20%207.58172%2016.4183%204%2012%204ZM2%2012C2%206.47715%206.47715%202%2012%202C17.5228%202%2022%206.47715%2022%2012C22%2017.5228%2017.5228%2022%2012%2022C6.47715%2022%202%2017.5228%202%2012Z%22%20fill=%22black%22/%3E%0A%3Cpath%20d=%22M10.146%2011.796L7%208.694L8.694%207L11.818%2010.102L14.92%207L16.614%208.694L13.512%2011.796L16.614%2014.92L14.92%2016.614L11.818%2013.512L8.694%2016.614L7%2014.92L10.146%2011.796Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
}
"
`;

exports[`buildCss() > should build CSS variables for > o3-tooltip component tokens > for core/professional brand 1`] = `
"/**
 * Do not edit directly
 */


[data-o3-brand="professional"] .o3-tooltip {
  --o3-tooltip-background-color: var(--o3-color-palette-slate);
  --o3-tooltip-text-color: var(--o3-color-palette-white);
  --o3-tooltip-icon-info: url("data:image/svg+xml,%3Csvg%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20xmlns=%22http://www.w3.org/2000/svg%22%3E%0A%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M12%204C7.58172%204%204%207.58172%204%2012C4%2016.4183%207.58172%2020%2012%2020C16.4183%2020%2020%2016.4183%2020%2012C20%207.58172%2016.4183%204%2012%204ZM2%2012C2%206.47715%206.47715%202%2012%202C17.5228%202%2022%206.47715%2022%2012C22%2017.5228%2017.5228%2022%2012%2022C6.47715%2022%202%2017.5228%202%2012Z%22%20fill=%22black%22/%3E%0A%3Cpath%20d=%22M13.2948%2010.012V17.376H10.7188V10.012H13.2948ZM10.5508%207.99602C10.5508%207.58536%2010.6908%207.25402%2010.9708%207.00202C11.2601%206.75002%2011.6008%206.62402%2011.9928%206.62402C12.3941%206.62402%2012.7348%206.75002%2013.0148%207.00202C13.3041%207.25402%2013.4488%207.58536%2013.4488%207.99602C13.4488%208.40669%2013.3041%208.74269%2013.0148%209.00402C12.7348%209.25602%2012.3941%209.38202%2011.9928%209.38202C11.6008%209.38202%2011.2601%209.25602%2010.9708%209.00402C10.6908%208.74269%2010.5508%208.40669%2010.5508%207.99602Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-tooltip-icon-cross: url("data:image/svg+xml,%3Csvg%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20xmlns=%22http://www.w3.org/2000/svg%22%3E%0A%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M12%204C7.58172%204%204%207.58172%204%2012C4%2016.4183%207.58172%2020%2012%2020C16.4183%2020%2020%2016.4183%2020%2012C20%207.58172%2016.4183%204%2012%204ZM2%2012C2%206.47715%206.47715%202%2012%202C17.5228%202%2022%206.47715%2022%2012C22%2017.5228%2017.5228%2022%2012%2022C6.47715%2022%202%2017.5228%202%2012Z%22%20fill=%22black%22/%3E%0A%3Cpath%20d=%22M10.146%2011.796L7%208.694L8.694%207L11.818%2010.102L14.92%207L16.614%208.694L13.512%2011.796L16.614%2014.92L14.92%2016.614L11.818%2013.512L8.694%2016.614L7%2014.92L10.146%2011.796Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
}
"
`;

exports[`buildCss() > should build CSS variables for > o3-tooltip component tokens > for whitelabel brand 1`] = `
"/**
 * Do not edit directly
 */


[data-o3-brand="whitelabel"] .o3-tooltip {
  --o3-tooltip-background-color: var(--o3-color-palette-white);
  --o3-tooltip-text-color: var(--o3-color-palette-black-90);
  --o3-tooltip-icon-info: url("data:image/svg+xml,%3Csvg%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20xmlns=%22http://www.w3.org/2000/svg%22%3E%0A%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M12%204C7.58172%204%204%207.58172%204%2012C4%2016.4183%207.58172%2020%2012%2020C16.4183%2020%2020%2016.4183%2020%2012C20%207.58172%2016.4183%204%2012%204ZM2%2012C2%206.47715%206.47715%202%2012%202C17.5228%202%2022%206.47715%2022%2012C22%2017.5228%2017.5228%2022%2012%2022C6.47715%2022%202%2017.5228%202%2012Z%22%20fill=%22black%22/%3E%0A%3Cpath%20d=%22M13.2948%2010.012V17.376H10.7188V10.012H13.2948ZM10.5508%207.99602C10.5508%207.58536%2010.6908%207.25402%2010.9708%207.00202C11.2601%206.75002%2011.6008%206.62402%2011.9928%206.62402C12.3941%206.62402%2012.7348%206.75002%2013.0148%207.00202C13.3041%207.25402%2013.4488%207.58536%2013.4488%207.99602C13.4488%208.40669%2013.3041%208.74269%2013.0148%209.00402C12.7348%209.25602%2012.3941%209.38202%2011.9928%209.38202C11.6008%209.38202%2011.2601%209.25602%2010.9708%209.00402C10.6908%208.74269%2010.5508%208.40669%2010.5508%207.99602Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
  --o3-tooltip-icon-cross: url("data:image/svg+xml,%3Csvg%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20xmlns=%22http://www.w3.org/2000/svg%22%3E%0A%3Cpath%20fill-rule=%22evenodd%22%20clip-rule=%22evenodd%22%20d=%22M12%204C7.58172%204%204%207.58172%204%2012C4%2016.4183%207.58172%2020%2012%2020C16.4183%2020%2020%2016.4183%2020%2012C20%207.58172%2016.4183%204%2012%204ZM2%2012C2%206.47715%206.47715%202%2012%202C17.5228%202%2022%206.47715%2022%2012C22%2017.5228%2017.5228%2022%2012%2022C6.47715%2022%202%2017.5228%202%2012Z%22%20fill=%22black%22/%3E%0A%3Cpath%20d=%22M10.146%2011.796L7%208.694L8.694%207L11.818%2010.102L14.92%207L16.614%208.694L13.512%2011.796L16.614%2014.92L14.92%2016.614L11.818%2013.512L8.694%2016.614L7%2014.92L10.146%2011.796Z%22%20fill=%22black%22/%3E%0A%3C/svg%3E");
}
"
`;
